@@ -26,7 +26,7 @@ if (STATIC_BUILD OR NOT USE_SYSTEM_CURL)
     -DCURL_DISABLE_LDAP=1
     -DCURL_DISABLE_LDAPS=1
     -DCURL_DISABLE_POP3=1
-    -DCURL_DISABLE_PROXY=1
+    #-DCURL_DISABLE_PROXY=1
     -DCURL_DISABLE_RTSP=1
     -DCURL_DISABLE_TELNET=1
     -DCURL_DISABLE_TFTP=1
